test/Common/LinkerScriptParsing/Errors/Memory/InvalidOriginLength/Inputs/script1.t
MEMORY {
  A (rx) : ORIG = 0x100, LENGTH = 0x200
}